--- a/app/src/main/res/layout/activity_instru_mis_reservas.xml
+++ b/app/src/main/res/layout/activity_instru_mis_reservas.xml
@@ -9,7 +9,15 @@
     android:background="@android:color/white"
     tools:context=".InstruMisReservas">
 
-
+    <ImageButton
+        android:background="@android:color/transparent"
+        android:id="@+id/ibVolver"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/ic_flecha_volver"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:contentDescription="@string/txtVolver" />
 
     <TextView
         android:id="@+id/tvTitulo"
@@ -21,7 +29,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginEnd="15dp"
         android:textColor="@android:color/black"
-        android:layout_marginTop="60dp" />
+        android:layout_marginTop="20dp" />
 
 
     <FrameLayout
