--- a/app/src/main/res/layout/activity_reservas_aprendiz.xml
+++ b/app/src/main/res/layout/activity_reservas_aprendiz.xml
@@ -7,6 +7,16 @@
     android:layout_height="match_parent">
 
 
+    <ImageButton
+        android:background="@android:color/transparent"
+        android:id="@+id/ibVolver"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/ic_flecha_volver"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:contentDescription="@string/txtVolver" />
+
     <TextView
         android:id="@+id/tvTitulo"
         android:layout_width="200dp"
@@ -17,7 +27,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginEnd="15dp"
         android:textColor="@android:color/black"
-        android:layout_marginTop="100dp" />
+        android:layout_marginTop="40dp" />
 
 
     <FrameLayout
